example/lib/src/generated/errors/errors_localization_fa.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Persian (`fa`).
class ErrorsLocalizationFa extends ErrorsLocalization {
  ErrorsLocalizationFa([String locale = 'fa']) : super(locale);

  @override
  String get error => 'خطایی رخ داده است';

  @override
  String get unexpectedError => 'یک خطای غیرمنتظره رخ داد';

  @override
  String get bugReportSentText => 'گزارش باگ با موفقیت ارسال شد.';
}
